--- a/css/style.css
+++ b/css/style.css
@@ -8240,7 +8240,7 @@ textarea.form-control {
     margin-bottom: 20px; }
     .dbox .icon span {
       font-size: 20px;
-      color: white; }
+      color: black; }
   .dbox .text {
     width: 100%; }
 
